--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,60 @@
   --gutter-xs: 16px; /* Extra small */
   --gutter-xxs: 8px; /* Extra-extra small */
 }
+
+body {
+  background-color: var(--color-200);
+}
+
+.container {
+  background-color: var(--color-300);
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
+  display: grid;
+  grid-auto-rows: min-content;
+  height: 95vh;
+  max-width: 960px;
+  margin: var(--gutter-xxs) auto;
+  box-shadow: 0 10px 20px var(--color-800), 0 6px 6px var(--color-900);
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.header-container {
+  background-color: var(--color-400);
+  color: var(--color-50);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--gutter-sm);
+}
+
+.header-container .btn {
+  border-radius: var(--size-xxs);
+  padding: var(--size-xs) var(--size-2xl);
+  font-size: var(--size-lg);
+}
+
+.btn {
+  background-color: var(--color-500);
+  color: var(--color-50);
+  border: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 4px 6px var(--color-700);
+}
+
+.btn:hover {
+  background-color: var(--color-600);
+  box-shadow: 0 6px 8px var(--color-800);
+  transform: translateY(-2px);
+}
+
+.btn:active {
+  background-color: var(--color-700);
+  box-shadow: 0 2px 4px var(--color-900);
+  transform: translateY(0);
+}
