--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body {
   font-style: normal;
   display: grid;
   grid-auto-rows: min-content;
-  height: 95vh;
+  min-height: 95vh;
   max-width: 960px;
-  margin: var(--gutter-xxs) auto;
+  margin: var(--gutter-xs) auto;
   box-shadow: 0 10px 20px var(--color-800), 0 6px 6px var(--color-900);
   border-radius: 12px;
   overflow: hidden;
@@ -58,7 +58,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--gutter-sm);
+  padding: var(--gutter-sm) var(--gutter-md);
 }
 
 .header-container .btn {
@@ -88,4 +88,67 @@ body {
   background-color: var(--color-700);
   box-shadow: 0 2px 4px var(--color-900);
   transform: translateY(0);
+}
+
+.main-container {
+  padding: var(--gutter-md);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: var(--gutter-xs);
+}
+
+.book-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: var(--gutter-xs);
+  background-color: var(--color-100);
+  color: var(--color-800);
+  border: 2px solid var(--color-300);
+  border-radius: 12px;
+  padding: var(--gutter-xs);
+  box-shadow: 0 4px 8px var(--color-400), 0 2px 4px var(--color-500);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.book-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px var(--color-500), 0 3px 6px var(--color-600);
+}
+
+.book-title {
+  font-size: var(--size-xl);
+  font-weight: 700;
+  margin-bottom: var(--gutter-xxs);
+  color: var(--color-700);
+}
+
+.book-author,
+.book-pages,
+.book-read {
+  font-size: var(--size-md);
+  margin: 4px 0;
+  color: var(--color-600);
+}
+
+.book-read span {
+  background-color: var(--color-500);
+  border-radius: 4px;
+  color: var(--color-50);
+  font-size: var(--size-xs);
+  font-weight: 700;
+  padding: 1px var(--gutter-xxs);
+  text-transform: uppercase;
+}
+
+
+.card-buttons {
+  display: flex;
+  gap: var(--gutter-xxs);
+}
+
+.book-card .btn {
+  border-radius: var(--size-xxs);
+  padding: var(--size-xs) var(--size-xs);
+  font-size: var(--size-xs);
 }
